# sovereignkernel

./: .gitignore  AGENTS.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/vault-audit/: Cargo.toml
crates/vault-audit/src/: lib.rs
crates/vault-common/: Cargo.toml
crates/vault-common/src/: error.rs  lib.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: backup.rs  db_encryption.rs  db_key_service.rs  db_migration.rs  lib.rs  rate_limiter.rs  state_validator.rs  tests.rs  vault.rs
crates/vault-crypto/: Cargo.toml
crates/vault-crypto/src/: hkdf.rs  kdf.rs  keys.rs  lib.rs  memory_lock.rs  secure_delete.rs  tests.rs
crates/vault-db-tool/: Cargo.toml
crates/vault-db-tool/src/: main.rs
crates/vault-shamir/: Cargo.toml
crates/vault-shamir/src/: lib.rs
crates/vault-tpm/: Cargo.toml
crates/vault-tpm/src/: counter.rs  lib.rs  manager.rs  session.rs
docs/: ANALYSE.md  API.md  ARCHITECTURE.md
electron-ui/: package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
electron-ui/src/main/: index.ts  ipc-client.ts  preload.ts  tray.ts  x25519-handshake.ts  x25519.ts
electron-ui/src/renderer/: App.tsx  index.html
electron-ui/src/renderer/components/: CryptoConsole.tsx  Dashboard.tsx  Devices.tsx  Logs.tsx  SetupWizard.tsx
electron-ui/src/shared/: types.ts
installer/: sovereignkernel.nsi
scripts/: Install-SovereignKernel.ps1
windows-service/: AuditEventLogger.cs  GracefulShutdown.cs  HardenedPipeServer.cs  IntegrityCheck.cs  LogRotation.cs  Program.cs  SecureMemory.cs  SovereignKernelService.csproj  Tpm2VaultService.cs  WindowsServiceBase.cs  appsettings.json
