[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core vault logica voor SovereignKernel"

[dependencies]
vault-common = { path = "../vault-common" }
vault-crypto = { path = "../vault-crypto" }
vault-tpm = { path = "../vault-tpm" }
vault-audit = { path = "../vault-audit" }
vault-shamir = { path = "../vault-shamir" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
